<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">GSAN - Impressão Simultânea</string>
    <string name="bt_not_enabled_leaving">Bluetooth não esta habilitado.</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="db_erro">Erro ao acessar o banco de dados</string>
    <string name="db_erro_deletar_registro">Erro ao apagar o registro</string>
    <string name="db_erro_inserir_registro">Erro ao inserir o registro</string>
    <string name="db_erro_pesquisar_registro">Erro ao consultar o registro</string>
    <string name="default_web_client_id">790896413854-qglo9t9056c3c81cg3dla4rjpitncvrc.apps.googleusercontent.com</string>
    <string name="dispositivo_nao_pareado">Nenhuma impressora pareada.</string>
    <string name="falha_conecao">Não foi possivel se conectar à impressora.</string>
    <string name="gcm_defaultSenderId">790896413854</string>
    <string name="google_api_key">AIzaSyCT68NUoRKS-DX7HhSn8RFbWXaUfk8Xfls</string>
    <string name="google_app_id">1:790896413854:android:ce78d1f44904f21fd83f8f</string>
    <string name="google_crash_reporting_api_key">AIzaSyCT68NUoRKS-DX7HhSn8RFbWXaUfk8Xfls</string>
    <string name="google_storage_bucket">isc-sanep.appspot.com</string>
    <string name="obrigatorio">É obrigatório:</string>
    <string name="procurando_dispositivos">Procurando novos dispositivos…</string>
    <string name="project_id">isc-sanep</string>
    <string name="search_menu_title">Search</string>
    <string name="selecionar_dispositivo">Selecione a impressora a conectar.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_aguarde">Aguarde…</string>
    <string name="str_alert_download_apk_erro">Houve um erro ao verificar se há nova versão.</string>
    <string name="str_alert_download_download_error">Não há nova versão disponível.</string>
    <string name="str_alert_download_title">Download de nova versão</string>
    <string name="str_alert_exportar_bd">Base de Dados exportada com sucesso!</string>
    <string name="str_alert_verificar_versao_erro">Houve um erro ao baixar o arquivo.</string>
    <string name="str_anormalidade">Anormalidade</string>
    <string name="str_anormalidade_consumo">Anormalidade Consumo</string>
    <string name="str_anormalidade_consumo_exige_foto_mensagem">%1$s. Foto obrigatória.</string>
    <string name="str_anormalidade_consumo_exige_foto_pergunta">%1$s. Foto obrigatória. %2$s</string>
    <string name="str_anormalidade_consumo_nao_impressao">Anormalidade consumo não permite impressão.</string>
    <string name="str_anormalidade_leitura">Anormalidade Leitura</string>
    <string name="str_anormalidade_nao_impressao">Anormalidade não permite impressão.</string>
    <string name="str_apagar_dados">Apagar Dados</string>
    <string name="str_atencao">Atenção</string>
    <string name="str_ativar">Ativar</string>
    <string name="str_bt_cancela">Cancelar</string>
    <string name="str_bt_continuar">Continuar</string>
    <string name="str_bt_pausar">Pausar</string>
    <string name="str_button_limpar">LIMPAR</string>
    <string name="str_button_menu">MENU</string>
    <string name="str_camera_sd">Seu SDCARD não está disponível.</string>
    <string name="str_confirma_envio_fotos">Confirma o envio das fotos?</string>
    <string name="str_confirmar_ocupacao_imovel">Imóvel está ocupado?</string>
    <string name="str_constrast_label">Constraste</string>
    <string name="str_consumo_nao_impressao">Consumo não permite impressão.</string>
    <string name="str_conta_anormalidade_agua">Anorm. Cons. Água:</string>
    <string name="str_conta_anormalidade_esgoto">Anorm. Cons. Esgoto:</string>
    <string name="str_conta_consumo_agua">Consumo de Água:</string>
    <string name="str_conta_consumo_esgoto">Consumo Esgoto:</string>
    <string name="str_conta_consumo_tipo_agua">Consumo Tipo Água:</string>
    <string name="str_conta_consumo_tipo_esgoto">Consumo Tipo Esgoto:</string>
    <string name="str_conta_dias_consumo">Dias de consumo:</string>
    <string name="str_conta_indicador_guia_lixo_impressa">Guia do Imóvel Já Impressa:</string>
    <string name="str_conta_indicador_possui_guia">Imóvel Possui Guia de Lixo:</string>
    <string name="str_conta_inscricao">Inscrição:</string>
    <string name="str_conta_leitura">Leitura Faturada de Água:</string>
    <string name="str_conta_leitura_poco">Leitura Faturada Poço:</string>
    <string name="str_conta_valor">Valor total: R$</string>
    <string name="str_conta_valor_agua">Valor da Água: R$</string>
    <string name="str_conta_valor_credito">Valor créditos: R$</string>
    <string name="str_conta_valor_debito">Valor débito: R$</string>
    <string name="str_conta_valor_esgoto">Valor de esgoto: R$</string>
    <string name="str_data">Data</string>
    <string name="str_desativadar">Desativar</string>
    <string name="str_download_alert_file">Erro ao carregar arquivo</string>
    <string name="str_download_erro_abortar">Enviando para tela de escolha do arquivo</string>
    <string name="str_download_erro_problema_desconhecido">Houve um problema desconhecido carregar os dados. Encaminhando para carregamento OFFLINE</string>
    <string name="str_download_progress_titulo">Carregando o arquivo. Por favor, aguarde…</string>
    <string name="str_download_servidor_offline">Servidor offline</string>
    <string name="str_encaminhar_arquivo_completo">Encaminhando para geração do arquivo de retorno completo.</string>
    <string name="str_enviados_alert">Todos os imóveis lidos foram enviados…</string>
    <string name="str_erro_aborted">Operação Cancelada</string>
    <string name="str_erro_arquivo_finalizado">O arquivo a ser processado ja foi finalizado.</string>
    <string name="str_erro_carregando">Houve um problema ao carregar o arquivo. Encaminhando para carregamento OFFLINE</string>
    <string name="str_erro_download">Houve um problema ao baixar o arquivo. Encaminhando para carregamento OFFLINE</string>
    <string name="str_erro_finalizacao">Não foi possivel enviar sinal de finalização ao GSAN. Favor finalizar novamente.</string>
    <string name="str_erro_generico">Houve um problema desconhecido ao carregar os dados. Encaminhando para carregamento OFFLINE</string>
    <string name="str_erro_generico_envio">Não foi possível enviar o arquivo de retorno</string>
    <string name="str_erro_generico_envio_default">Não foi possível enviar o arquivo de retorno.</string>
    <string name="str_erro_impressora">%1$s Deseja tentar novamente ?</string>
    <string name="str_erro_intervalo_requisicao">Aguarde %1$s para transmitir novamente.</string>
    <string name="str_erro_nao_calculado">O imóvel de matricula %1$s não está calculado. Favor recalcular</string>
    <string name="str_erro_nao_impresso">O imovel de matrícula : %1$s não foi impresso, deseja imprimi-lo?</string>
    <string name="str_erro_off">O aparelho está sem sinal ou o servidor está OFFLINE. Tente de novo.</string>
    <string name="str_erro_quantidade_diferente">A quantidade de imóveis enviados não corresponde ao esperado</string>
    <string name="str_erro_retorno">Houve um erro na geração do arquivo de retorno</string>
    <string name="str_erro_revisitar">Existe imóvel a revisitar. Deseja ir agora?</string>
    <string name="str_erro_sem_arquivo">Nenhum arquivo liberado para o celular. Encaminhando para carregamento OFFLINE</string>
    <string name="str_erro_sinal_campo">Houve um erro ao tentar marcar o arquivo para EM CAMPO. Encaminhando para carregamento OFFLINE</string>
    <string name="str_error_aborted">Você é obrigado a baixar e instalar a versão</string>
    <string name="str_error_carregar_arquivo_registro_duplicado">Houve um problema ao carregar o arquivo. O arquivo será carregado novamente</string>
    <string name="str_error_download">Houve um problema ao baixar o arquivo. Encaminhando para carregamento OFFLINE</string>
    <string name="str_error_laoding">Houve um problema ao carregar o arquivo. Encaminhando para carregamento OFFLINE</string>
    <string name="str_error_nofile">Nenhum arquivo liberado para o celular. Encaminhando para carregamento OFFLINE</string>
    <string name="str_error_off">O aparelho está sem sinal ou o servidor está OFFLINE. Tente de novo.</string>
    <string name="str_error_route_signal">Houve um erro ao tentar marcar o arquivo para EM CAMPO. Encaminhando para carregamento OFFLINE</string>
    <string name="str_extra_alert_erro">msgErro</string>
    <string name="str_geral_bt_cancela">Cancelar</string>
    <string name="str_info_codigo">Cod.Cat</string>
    <string name="str_info_economias">Economias</string>
    <string name="str_info_gerais">Informações gerais do imóvel</string>
    <string name="str_info_inscricao">Inscrição:</string>
    <string name="str_info_ligacao_agua">Sit. Lig. Água:</string>
    <string name="str_info_ligacao_esgoto">Sit. Lig. Esgoto:</string>
    <string name="str_info_matricula">Matrícula:</string>
    <string name="str_info_subcategoria">SubCategoria</string>
    <string name="str_login_login">ENTRAR</string>
    <string name="str_login_pass">Senha:</string>
    <string name="str_login_user">Login:</string>
    <string name="str_menu_relatorio">Relatórios</string>
    <string name="str_relatorio_resumo_quadra">Resumo Por Quadra</string>
    <string name="str_sair_carregamento">Sair</string>
    <string name="str_sair_login">SAIR</string>
    <string name="str_sequencial">Sequencial de Rota:</string>
    <string name="str_total_com_anormalidade">Total visitado com Anorm.:</string>
    <string name="str_total_imoveis">Total de imóveis:</string>
    <string name="str_total_imoveis_a_visitar">Total de imóveis a visitar:</string>
    <string name="str_total_imoveis_visitados">Total de imóveis visitados:</string>
    <string name="str_total_ja_visitado">Total já visitado:</string>
    <string name="str_total_sem_anormalidade">Total visitado sem Anorm.:</string>
</resources>