<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/fundotela" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="15.0sp" android:layout_gravity="center" android:id="@id/versao" android:paddingBottom="8.0pt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="1212" style="@style/label" />
                <ImageView android:id="@id/imgTopLogin" android:layout_width="fill_parent" android:layout_height="150.0dip" android:src="@drawable/logo_gsan_impressao" />
            </LinearLayout>
            <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="210.0dip" android:layout_height="fill_parent" android:layout_marginTop="5.0pt">
                <TextView android:textSize="15.0sp" android:text="@string/str_login_user" style="@style/label" />
                <EditText android:id="@id/edtLogin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="textEmailAddress" />
                <TextView android:textSize="15.0sp" android:text="@string/str_login_pass" style="@style/label" />
                <EditText android:id="@id/edtPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <Button android:textColor="#ff000000" android:layout_gravity="center" android:id="@id/btSair" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_sair_login" android:layout_weight="0.5" />
                    <Button android:textColor="#ff000000" android:layout_gravity="center" android:id="@id/btLogin" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_login_login" android:layout_weight="0.5" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>