<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/fundotela" android:padding="3.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/fundobranco_bg" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minHeight="200.0dip">
        <LinearLayout android:orientation="horizontal" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="6.0dip">
            <TextView android:textColor="#ffffffff" android:gravity="center" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_info_gerais" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:layout_marginBottom="3.0dip">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip">
                <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/usuario" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip">
                <TextView android:textSize="12.0sp" android:textColor="#ff000000" android:id="@id/endereco" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip">
            <View android:background="#ffbac2ca" android:layout_width="fill_parent" android:layout_height="1.1999817dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:textColor="#ff000000" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_info_ligacao_agua" />
            <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:id="@id/ligacaoAgua" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip">
            <View android:background="#ffbac2ca" android:layout_width="fill_parent" android:layout_height="1.1999817dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
            <TextView android:textStyle="bold" android:textColor="#ff000000" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_info_ligacao_esgoto" />
            <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/ligacaoEsgoto" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <TableLayout android:id="@id/tabelaCategorias" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="-5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="-5.0dip" android:stretchColumns="*">
            <TableRow>
                <TextView android:textColor="#ff000000" android:background="@drawable/tab_bg_cell" android:paddingLeft="4.0dip" android:layout_marginRight="1.0dip" android:text="@string/str_info_economias" style="@style/row" />
                <TextView android:textColor="#ff000000" android:background="@drawable/tab_bg_cell" android:text="@string/str_info_codigo" style="@style/row" />
                <TextView android:textColor="#ff000000" android:background="@drawable/tab_bg_cell" android:paddingLeft="1.0dip" android:layout_marginLeft="1.0dip" android:text="@string/str_info_subcategoria" style="@style/row" />
            </TableRow>
        </TableLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textStyle="bold" android:textColor="#ff000000" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_info_matricula" />
            <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/matricula" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip">
            <View android:background="#ffbac2ca" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textStyle="bold" android:textColor="#ff000000" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_info_inscricao" />
            <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/inscricao" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip">
            <View android:background="#ffbac2ca" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
            <TextView android:textStyle="bold" android:textColor="#ff000000" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_sequencial" />
            <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/sequencial" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>